// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportsExerciseLearners doesn't render groups information when show groups set to false 1`] = `
<div class="core-table-container">
  <table class="core-table">
    <thead style="border-bottom: 1px solid #dedede; font-size: 12px; color: rgb(97, 97, 97);">
      <tr>
        <th>Name</th>
        <th>Progress</th>
        <th>Time spent</th>
        <!---->
        <th>Last activity</th>
      </tr>
    </thead><span tag="tbody" name="list"><tr data-test="entry"><td><span class="labeled-icon-wrapper"><div class="icon"><mat-svg name="person" category="social" style="fill: #212121;"></mat-svg></div> <div class="label"><span dir="auto" class="debug-warning"><a dir="auto" class="KRouterLink-noKey-0_1eg6lrk link">
  learner1
</a></span>
</div></span></td>
<td>
  <div><span class="labeled-icon-wrapper" nowrap="nowrap"><div class="icon"><mat-svg name="stars" category="action" style="fill: #ffc107;"></mat-svg></div> <div class="label"><span dir="auto" class="debug-warning">
    Completed
  </span></div></span>
  <!---->
  </div>
</td>
<td><span>92 seconds</span></td>
<!---->
<td><span>
  yesterday
</span></td>
</tr>
<tr data-test="entry">
  <td><span class="labeled-icon-wrapper"><div class="icon"><mat-svg name="person" category="social" style="fill: #212121;"></mat-svg></div> <div class="label"><span dir="auto" class="debug-warning"><a dir="auto" class="KRouterLink-noKey-0_1eg6lrk link">
  learner2
</a></span></div></span></td>
  <td>
    <div><span class="labeled-icon-wrapper" nowrap="nowrap"><div class="icon"><mat-svg name="access_time" category="device" style="fill: #03a9f4;"></mat-svg></div> <div class="label"><span dir="auto" class="debug-warning">
    Started
  </span></div></span>
    <!---->
    </div>
  </td>
  <td><span>17 seconds</span></td>
  <!---->
  <td><span>
  3 hours ago
</span></td>
</tr></span></table>
</div>
`;

exports[`ReportsExerciseLearners renders all entries 1`] = `
<div class="core-table-container">
  <table class="core-table">
    <thead style="border-bottom: 1px solid #dedede; font-size: 12px; color: rgb(97, 97, 97);">
      <tr>
        <th>Name</th>
        <th>Progress</th>
        <th>Time spent</th>
        <th>
          Groups
        </th>
        <th>Last activity</th>
      </tr>
    </thead><span tag="tbody" name="list"><tr data-test="entry"><td><span class="labeled-icon-wrapper"><div class="icon"><mat-svg name="person" category="social" style="fill: #212121;"></mat-svg></div> <div class="label"><span dir="auto" class="debug-warning"><a dir="auto" class="KRouterLink-noKey-0_1eg6lrk link">
  learner1
</a></span>
</div></span></td>
<td>
  <div><span class="labeled-icon-wrapper" nowrap="nowrap"><div class="icon"><mat-svg name="stars" category="action" style="fill: #ffc107;"></mat-svg></div> <div class="label"><span dir="auto" class="debug-warning">
    Completed
  </span></div></span>
  <!---->
  </div>
</td>
<td><span>92 seconds</span></td>
<td>
  <div class="items-label"><span>
    group1, group2
  </span></div>
</td>
<td><span>
  yesterday
</span></td>
</tr>
<tr data-test="entry">
  <td><span class="labeled-icon-wrapper"><div class="icon"><mat-svg name="person" category="social" style="fill: #212121;"></mat-svg></div> <div class="label"><span dir="auto" class="debug-warning"><a dir="auto" class="KRouterLink-noKey-0_1eg6lrk link">
  learner2
</a></span></div></span></td>
  <td>
    <div><span class="labeled-icon-wrapper" nowrap="nowrap"><div class="icon"><mat-svg name="access_time" category="device" style="fill: #03a9f4;"></mat-svg></div> <div class="label"><span dir="auto" class="debug-warning">
    Started
  </span></div></span>
    <!---->
    </div>
  </td>
  <td><span>17 seconds</span></td>
  <td>
    <div class="items-label"><span>
    group2
  </span></div>
  </td>
  <td><span>
  3 hours ago
</span></td>
</tr></span></table>
</div>
`;
